build/media/development/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: testing
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/api_development:5
          command: ["/bin/bash"]
          args: ["-c", "node bin/start"]
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
