build/media/development/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: "http"
    nginx.ingress.kubernetes.io/enable-cors: "false"
  name: api-ingress
  namespace: testing
  labels:
    app: "api"
spec:
  rules:
    - host: dev-api.rfcx.org
      http:
        paths:
          - backend:
              serviceName: api-service
              servicePort: 80
